<resources>
    <string name="app_name">ShopNavigator</string>
    <string name="edit_message">Edit Message</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="startScandit">Start Scandit</string>
    <string name="txt_search">Type to search...</string>
    <string name="btn_scan">Scan</string>
    <string name="showList">Show List</string>
    <string name="showDB">Show Data Base</string>

    <!-- Strings used for the data base -->
    <string name="hello_world">Hello world!</string>

    <string name="editText_hint_quantity">Amount</string>
    <string name="editText_hint_product">Product</string>
    <string name="button_add_product">+</string>

    <string name="editText_errorMessage">Das Feld darf nicht leer sein.</string>
    <string name="btn_search">Search</string>
    <string name="cab_delete">delete entries</string>

</resources>
